tests/macros/float/extension.stderr
error: option `extension` does not exist for kind `float`
 --> $DIR/extension.rs:2:45
  |
2 |     let q = inquisition::questions![float { extension: todo!() }];
  |                                             ^^^^^^^^^
