tests/macros/float/extension.rs
fn main() {
    let q = inquisition::questions![float { extension: todo!() }];
}
